Implemented methods to delete every message from given users